# terml

./: CMakeLists.txt
include/: terml.h
source/: terml.cpp  terml_linux.cpp  terml_linux.h  terml_private.h  terml_windows.cpp  terml_windows.h
